--- a/templates/contact.html
+++ b/templates/contact.html
@@ -44,7 +44,8 @@
       <div class="col-sm-12 section-t8">
         <div class="row">
           <div class="col-md-7">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <form method="post">
+              {% csrf_token %}
               <div class="row">
                 <div class="col-md-6 mb-3">
                   <div class="form-group">
@@ -75,7 +76,7 @@
                 </div>
 
                 <div class="col-md-12 text-center">
-                  <button type="submit"  class="btn btn-a">Send Message</button>
+                  <button type="submit" class="btn btn-a">Send Message</button>
                 </div>
               </div>
             </form>
@@ -170,7 +171,7 @@
       </tr>
     </thead>
     <tbody>
-      {% for i in  message%}
+      {% for i in item %}
       <tr>
         <td>{{i.id}}</td>
         <td>{{i.name}}</td>
