--- a/templates/property-single.html
+++ b/templates/property-single.html
@@ -215,7 +215,7 @@
                     </li>
                     <li class="d-flex justify-content-between">
                       <strong>Email:</strong>
-                      <span class="color-text-a">annabella@example.com</span>
+                      <span class="color-text-a">mehedi4595@gmail.com</span>
                     </li>
                     <li class="d-flex justify-content-between">
                       <strong>Skype:</strong>
@@ -250,21 +250,22 @@
               </div>
               <div class="col-md-12 col-lg-4">
                 <div class="property-contact">
-                  <form class="form-a">
+                  <form class="form-a" method='post'>
+                    {% csrf_token %}
                     <div class="row">
                       <div class="col-md-12 mb-1">
                         <div class="form-group">
-                          <input type="text" class="form-control form-control-lg form-control-a" id="inputName" placeholder="Name *" required>
+                          <input type="text" class="form-control form-control-lg form-control-a" name='name' placeholder="Name *" required>
                         </div>
                       </div>
                       <div class="col-md-12 mb-1">
                         <div class="form-group">
-                          <input type="email" class="form-control form-control-lg form-control-a" id="inputEmail1" placeholder="Email *" required>
+                          <input type="email" class="form-control form-control-lg form-control-a" name='email' placeholder="Email *" required>
                         </div>
                       </div>
                       <div class="col-md-12 mb-1">
                         <div class="form-group">
-                          <textarea id="textMessage" class="form-control" placeholder="Comment *" name="message" cols="45" rows="8" required></textarea>
+                          <textarea  class="form-control" placeholder="Comment *" name="message" cols="45" rows="8" required></textarea>
                         </div>
                       </div>
                       <div class="col-md-12 mt-3">
